<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/sidemenu_header_height"
    android:orientation="horizontal"
    android:padding="@dimen/sys_spacing_16dp"
    android:background="@drawable/bg_sidemenu_header"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="@dimen/sidemenu_header_logo_size"
        android:layout_height="@dimen/sidemenu_header_logo_size"
        app:srcCompat="@mipmap/logo"
        android:layout_marginTop="@dimen/sidemenu_header_logo_spacing"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/sys_spacing_8dp"
        android:layout_marginTop="@dimen/sys_spacing_16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:paddingTop="@dimen/sys_spacing_8dp"
            style="@style/NavTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidemenu_header_subtitle"
            style="@style/NavTitle.Desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sidemenu_header_copyright"
            android:gravity="bottom|end"
            style="@style/NavTitle.CopyRight"
            tools:ignore="SmallSp"/>

    </LinearLayout>

</LinearLayout>